--- a/src/components/appNav/view.html
+++ b/src/components/appNav/view.html
@@ -1,10 +1,10 @@
 <!-- adds client side routing navigation with the iref and iref-params attributes -->
-<a iref="stories" $iref-params="{type: 'top'}"><b>Hacker News</b></a>
+<a iref="stories" $iref-params="{type: 'top'}"><b>WP Plugins Ranking</b></a>
 <a iref="stories" $iref-params="{type: 'new'}">new</a>
 | <a iref="stories" $iref-params="{type: 'show'}">show</a>
 | <a iref="stories" $iref-params="{type: 'ask'}">ask</a>
 | <a iref="stories" $iref-params="{type: 'job'}">jobs</a>
 <span>
-  <a href="http://nx-framework.com" target="_blank">Built with NX</a> |
-  <a href="https://github.com/nx-hacker-news/nx-hacker-news.github.io">Source</a>
+ <!--  <a href="http://nx-framework.com" target="_blank">Built with NX</a> |
+  <a href="https://github.com/nx-hacker-news/nx-hacker-news.github.io">Source</a> -->
 </span>
