--- a/src/components/storyItem/view.html
+++ b/src/components/storyItem/view.html
@@ -3,15 +3,15 @@
   <small class="light">(<a $href="story.url">${story.url | host}</a>)</small>
 </div>
 <div $if="!story.url">
-  <a iref="../story" $iref-params="{id: story.id}">${story.title}</a>
+  <a iref="../plugins" $iref-params="{id: story.id}">${story.title}</a>
 </div>
 
 <div $if="story.type === 'job'" class="subtext light">
-  <a iref="../story" $iref-params="{id: story.id}">${story.time | timeAgo} ago</a>
+  <a iref="/story" $iref-params="{id: story.id}">${story.time | timeAgo} ago</a>
 </div>
 <div $if="story.type !== 'job'" class="subtext light">
   ${story.score | unit 'point'} by
-  <a iref="../user" $iref-params="{id: story.by}">${story.by}</a>
-  <a iref="../story" $iref-params="{id: story.id}">${story.time | timeAgo} ago</a> |
-  <a iref="../story" $iref-params="{id: story.id}">${story.descendants | unit 'comment'}</a>
+  <a iref="/user" $iref-params="{id: story.by}">${story.by}</a>
+  <a iref="/plugin" $iref-params="{id: story.id}">${story.time | timeAgo} ago</a> |
+  <a iref="/plugin" $iref-params="{id: story.id}">${story.descendants | unit 'comment'}</a>
 </div>
