--- a/src/components/wp-plugins/view.html
+++ b/src/components/wp-plugins/view.html
@@ -3,7 +3,7 @@
 <!-- adds leave animations to the router views -->
 <nav is="app-nav"></nav>
 <app-router>
-  <story-list route="stories" default-route leave-animation="fadeOut .6s"></story-list>
+  <story-list route="plugins" default-route leave-animation="fadeOut .6s"></story-list>
   <user-page route="user" leave-animation="fadeOut .6s"></user-page>
-  <story-page route="story" leave-animation="fadeOut .6s"></story-page>
+  <story-page route="plugin" leave-animation="fadeOut .6s"></story-page>
 </app-router>
